# dapper

./: .gitignore  README.md  environment.yml  license.md  pyproject.toml
.github/workflows/: mirror.yml  publish_to_pypi.yml
dapper/: e5l_utils.py  utils.py
data/: Kuparuk_gageshed.dbf  Kuparuk_gageshed.shp  Kuparuk_gageshed.shx  e5lh_band_metadata.csv  elm_met_var_stats.csv
docs/notebooks/: 2. [ERA5] Downloading ERA5-Land hourly met data across regions (polygons) and exporting to ELM.ipynb  3. Creating gridded ELM inputs copy.ipynb  3. Creating gridded ELM inputs.ipynb  3. [ERA5] Creating gridded ELM inputs copy.ipynb  4. [CMIP] Download global files.ipynb  [deprecated] 1b. Exporting ERA5-Land hourly point data to ELM-ready format.ipynb
docs/notebooks/met data tutorials/: CMIP6 globally to ELM-ready.ipynb  ERA5-Land hourly at site(s) to ELM-ready.ipynb  ERA5-Land hourly gridded to ELM-ready.ipynb
docs/olmt-tutorials/: 01-surface-datasets-from-global-grid.ipynb  README.md
ngeegee/: dev.py  e5l_utils.py  metadata.py  oneoffs.py  randoms.py  utils.py
ngeegee.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: 1a. Sample ERA5-Land hourly at points.ipynb  1b. Exporting ERA5-Land hourly point data to ELM-ready format.ipynb  2. Downloading ERA5-Land hourly met data across regions (polygons) and exporting to ELM.ipynb  3. Creating gridded ELM inputs.ipynb  Sample ERA5-Land hourly at a point.ipynb  Sample ERA5-Land hourly at points.ipynb
src/dapper/: dev.py  oneoffs.py  sfiles_garbage.py  utils.py
src/dapper/cmip/: cmip_utils.py  dev.py
(+66 files in other folders)
