[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dapper"
version = "0.1.0"
description = "Data Preprocessing for ELM Runs"
authors = [{ name = "Dapper contributors", email = "dapper@lanl.gov" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD-3" }
dependencies = [
  "geopandas",
  "earthengine-api",
  "geemap",
  "pip",
  "xarray",
  "cftime",
  "tqdm",
  "rioxarray",
  "jupyter",
  "fastparquet",
  "netcdf4",
  "intake-esm", # for Pangeo CMIP access
  "gcsfs" # for Pangeo CMIP downloading
 ]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dapper"]
